Add 1 core profile