@@ -140,7 +140,20 @@
                                         <argument>-classpath</argument>
                                         <classpath/>
                                         <argument>--add-modules=jdk.incubator.vector</argument>
-                                        <argument>-Xmx3G</argument>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.AnnBenchRunner</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>annbench-1core</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-Djava.util.concurrent.ForkJoinPool.common.parallelism=1</argument>
+                                        <argument>-Djvector.physical_core_count=1</argument>
                                         <argument>-ea</argument>
                                         <argument>io.github.jbellis.jvector.example.AnnBenchRunner</argument>
                                     </arguments>
